# trimi

./: .gitignore  CMakeLists.txt
app/: CMakeLists.txt  main.cpp
include/trimi/: component_array.hpp  coordinator.hpp  entity_manager.hpp  event.hpp  game.hpp  system.hpp  system_manager.hpp
include/trimi/component/: circle.hpp  gravity.hpp  renderer.hpp  rigid_body.hpp
include/trimi/core/: component_manager.hpp  core.hpp  event.hpp  event_manager.hpp
include/trimi/system/: physic_system.hpp  renderer_system.hpp
src/: CMakeLists.txt  game.cpp
src/system/: physic_system.cpp  renderer_system.cpp
